[workspace]
members = ["contracts/*"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk", branch = "feat/remove-stargate" }
prost = "0.12.4"
prost-types = "0.12.4"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
cosmwasm-std = { version = "2.0.4", features = [
    "stargate",
    "staking",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
] }
cw2 = "2.0.0"
cw-storage-plus = "2.0.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false }
cosmwasm-schema = { version = "2.0.4", default-features = false }
serde-json-wasm = "1.0.0"
base64 = "0.21.7"
thiserror = "1.0.49"
