[package]
name = "dex_stargate"
version = "0.1.0"
edition = "2021"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
neutron-sdk = { workspace = true }
cosmwasm-std = { version = "1.4.0", features = ["stargate"] }
cw2 = "1.1.1"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
prost = "=0.12.3"
prost-types = "=0.12.3"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "1.3.1", default-features = false }
