[package]
name = "msg_receiver"
version = "0.1.0"
edition = "2021"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking"] }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
neutron-sdk = { workspace = true }
cw-storage-plus = { workspace = true }
getrandom = {workspace = true}

[dev-dependencies]
cosmwasm-schema = { workspace = true }
