[package]
name = "neutron_interchain_txs"
version = "0.1.0"
authors = ["ratik <sergey.r@p2p.org>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
cw-storage-plus = { workspace = true }
cosmos-sdk-proto = { workspace = true }
neutron-sdk = { workspace = true }
neutron-std = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
getrandom = {workspace = true}

[dev-dependencies]
cosmwasm-schema = { workspace = true }
