[package]
name = "stargate_querier"
version = "0.1.0"
edition = "2021"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
neutron-sdk = { workspace = true }

# These dependencies are slightly outdated because of osmosis-std
osmosis-std = "0.19.2"
prost = "=0.11"
cosmos-sdk-proto = { version = "0.19.0", default-features = false }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
