[package]
name = "tokenfactory"
version = "0.1.0"
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
library = []

[dependencies]
cosmwasm-std = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
neutron-sdk = { workspace = true }
neutron-std = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
