[package]
name = "howto_register_custom_kv_icq"
version = "0.1.0"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate", "staking"] }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
neutron-sdk = { workspace = true }
neutron-std = { workspace = true }
cosmos-sdk-proto = { workspace = true }
cw-storage-plus = { workspace = true }
prost = { workspace = true }
serde-json-wasm = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
cosmwasm-schema = { workspace = true }
